# local-food-agent

./: .env.example  .gitignore  README.md  pyproject.toml  requirements.txt  run_all.sh  setup.sh
api/: main.py
docs/: deployment.md  research_note.md  supabase_schema.sql
frontend/app/: .env.example  PWA_SETUP.md  next.config.js  package.json  tailwind.config.ts
frontend/app/app/: globals.css  layout.tsx  page.tsx
frontend/app/components/: chat-input.tsx  chat-message.tsx  image-gallery.tsx  map-embed.tsx  restaurant-card.tsx  theme-toggle.tsx
frontend/app/hooks/: use-toast.ts
frontend/app/lib/: api.ts  types.ts
frontend/app/public/: manifest.json
scripts/: benchmark_latency.py  run_vllm.sh  setup_vllm.sh
src/: __init__.py  agent.py  config.py  local_llm.py
src/db/: __init__.py  client.py
src/services/: __init__.py  kakao.py  serper.py  summarizer.py
src/tools/: __init__.py  image.py  nutrition.py  recipe.py  restaurant.py  save_image.py  update_image.py
